@@ -1,4 +1,5 @@
 - version: unreleased
+- Added reset quiz method set all incorrect (@kh06089)
 - Dynamically added file to cloud, create edit form from uploaded file(@Chino96)
 - Quiz form now displays list of quizes for course(Chino96)
 - Finished quiz edit form using read logic(@Chino96)
